2008-12-12  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfaes-bwf.c:
	* gst/mxf/mxfalaw.c: (mxf_alaw_create_caps):
	* gst/mxf/mxfdemux.c:
	* gst/mxf/mxfdv-dif.c: (mxf_dv_dif_create_caps):
	* gst/mxf/mxfjpeg2000.c:
	* gst/mxf/mxfmpeg.c:
	* gst/mxf/mxfup.c:
	Major update of the TODO lists. There's still much to do. 

2008-12-11  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfdemux.c: (gst_mxf_demux_handle_metadata_track),
	(gst_mxf_demux_handle_header_metadata_resolve_references),
	(gst_mxf_demux_handle_metadata):
	* gst/mxf/mxfparse.c: (mxf_metadata_track_parse),
	(mxf_metadata_structural_component_parse),
	(mxf_metadata_structural_component_reset):
	* gst/mxf/mxfparse.h:
	* gst/mxf/mxftypes.h:
	Implement parsing of Event Tracks, Static Tracks, DM Segments
	and DM Source Clips as a preparation for descriptive metadata
	support. Next step is to implement SMPTE S380M, "Descriptive
	Metadata Scheme-1".

2008-12-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfjpeg2000.c: (mxf_jpeg2000_create_caps):
	Implement detection of the colorspace used by the
	JPEG2000 codestream. XYZ colorspace isn't supported by
	our decoders yet unfortunately.

2008-12-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfparse.c:
	(mxf_metadata_generic_picture_essence_descriptor_set_caps):
	All frame layout values except 0 are for interlaced video,
	not only 1 and 2.

2008-12-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfdemux.c: (gst_mxf_demux_reset_metadata),
	(gst_mxf_demux_handle_primer_pack),
	(gst_mxf_demux_handle_metadata_preface),
	(gst_mxf_demux_handle_header_metadata_resolve_references),
	(gst_mxf_demux_choose_package),
	(gst_mxf_demux_handle_header_metadata_update_streams),
	(gst_mxf_demux_parse_footer_metadata),
	(gst_mxf_demux_handle_klv_packet):
	* gst/mxf/mxfdemux.h:
	* gst/mxf/mxftypes.h:
	Remove the concept of "final" metadata, broken files have updated